fix z-index that broke hover

--- a/components/epg/epg.less
+++ b/components/epg/epg.less
@@ -64,6 +64,8 @@
     font: 15px Roboto;
     background-color: #0e212f;
     scroll-behavior:smooth;
+    position:relative;
+    z-index:30;
 
     @media (min-width: (@mobileLargeBP + 1px)) {
         top: 0px;
@@ -184,7 +186,6 @@
     content: "";
     scroll-behavior: smooth;
     white-space: nowrap;
-    z-index:-1;
 
     .channel-row {
         display: -webkit-flex;
